--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6, .navbar {
 	margin: 0;
 }
+
 .navbar {
 	border-radius: 0;
 	font-family: "Helvetica Neue", Helvetica;
@@ -38,4 +39,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 .btn {
 	border-radius: 0;
+}
+body {
+	background: url('bg.png');
+	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
