--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -13,9 +13,18 @@
 		<br />
 		<%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-primary btn-large' %>
 		<% end %>
+
+		<br />
+		<br />
+
+		<% if current_user && current_user.enrolled_in?(@course) %>
+			<h3 class="label label-info">You Are Enrolled!</h3>
+		<% else %>
+			<%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+		<% end %>
 	</div>
 
-	<div class="col-sm-4 col-xs-12">
+	<div class="col-sm-8 col-xs-12">
 		<%= @course.description %>
 	</div>
 
