--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,5 +1,5 @@
 /* variables */
-$footer-height: 100px;
+$footer-height: auto;
 
 html, 
 body {
@@ -20,8 +20,33 @@ body {
 	font-family: "Helvetica Neue", Helvetica;
 	padding: 10px 0px;
 	margin-top: 30px;
+	font-weight: 100;
 }
 #footer a {
 	color: white;
 	font-weight: 100;
+}
+.social-button {
+	width: 32px;
+	margin: 4px;
+}
+.social a:hover {
+	text-decoration: none;
+}
+
+$footer-height-mobile: auto;
+@media (max-width: 750px) {
+  #footer {
+    height:$footer-height-mobile;
+  }
+
+  #wrap {
+    margin: 0 auto -$footer-height-mobile;
+    /* Pad bottom by footer height */
+    padding: 0 0 $footer-height-mobile;
+  }
+  #footer .social {
+  margin-top: 10px;
+  }
+
 }
